# EmptyTemplateCpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_script.sh
include/: MyApp.hpp  my_app.hpp  my_app_subsystem.hpp  my_app_task.hpp
src/: .CMakeLists.txt.swp  CMakeLists.txt  config.json  main.cpp  my_app.cpp  my_app_subsystem.cpp  my_app_task.cpp
test/: .CMakeLists.txt.swp  CMakeLists.txt  unit_test.cpp
